--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -13,6 +13,10 @@ $link-color: $primary-color;
 $link-color-visited: $primary-color;
 $link-color-active: $primary-color;
 
+html {
+    background: #fefefe url(../images/alpha-background.png);
+}
+
 html, body {
     font-size: $base-font-size;
     line-height: normal;
@@ -22,7 +26,6 @@ html, body {
 
 body {
     color: $primary-text-color;
-    background: #fefefe url(../images/alpha-background.png);
 }
 
 a:link {color: $primary-color;}
@@ -64,7 +67,7 @@ ol, ul {
 }
 
 ol {
-    max-width: 600px;
+    max-width: 85%;
     margin-top: 12px;
     li {
         margin-top: 20px;
@@ -86,7 +89,7 @@ li {
 }
 
 img {
-    max-width: 100%;
+    max-width: 90%;
 }
 
 .phonetic {
@@ -100,6 +103,8 @@ img {
 
 .logo {
     margin-bottom: 40px;
+    margin-left: -5.73%;
+    max-width: 105.73%;
 }
 
 .container {
@@ -111,8 +116,8 @@ img {
     min-width: 285px;
     background: #FFFFFF;
     margin-left: 5%;
-    padding: 15% 6.5% 6.5%;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 15% 5% 5% 11.2%;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
 }
 
 .example {
