--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -112,7 +112,7 @@ img {
     min-width: 285px;
     background: #FFFFFF;
     margin-left: 5%;
-    padding: 15% 5% 5% 11.2%;
+    padding: 10% 5% 5%;
 }
 
 .example {
